<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TrackOn</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="places_hint">Places Of Interest</string>
    <string name="places_text">Places</string>
    <string name="paces_visited_dialog_title">Notes on Visited Place</string>
    <string name="place_name">Place</string>
    <string name="visited_time">Visited Dates and Times</string>
    <string name="notes">Notes</string>
    <string name="Expenses">Expenses</string>
    <string name="places_visited_close_button">Close</string>
    <string name="placeNameHint">Name of the Place</string>
    <string name="todo">TODO</string>
</resources>
